# SAMToFasta

./: Cargo.toml  README.md
src/: main.rs
